@@ -1,2 +1,2 @@
-screen java -server -Xmx15G -XX:+UseZGC -jar pve_core.jar nogui
+screen java -server -Xmx15G -XX:+UseG1GC -jar pve_core.jar nogui
 
